feat: Add color noise to orbital elements sets.